@@ -4,11 +4,13 @@ AUX portage-2.3.84-eapply_non_verbose.patch 1688 BLAKE2B 127f018e36e2baf686a52c7
 AUX portage-ccache.conf 60 BLAKE2B b45ac69ba4bf6b221191ab9618aa484948ad8765ae906402e83df4b72fd10e006621523fe5b6d59219318a978e368649047784bb85771cd189b2542a2e19f941 SHA512 36427e57046118ecf982fc3b1a80a3543b5682e3eef7df5dfc8a50b261a5da56f997dd75f63c5194049aceea204c37aee638a3bc383b9f7a0eff8ac9c35f3b1c
 DIST portage-3.0.1.tar.bz2 1043793 BLAKE2B 22b2e67870abdc0c26046a5ab1e40fa1214d8cc6779c5ced8014a5031d6c5344654cf2a2fb8f55370f2875d9eace6233f257a3232fa6bbc248a3692ad4b3475e SHA512 ccf962034b6b78bae3f8844c10002a34942beb535e2e8edd18017b95a120de4eebc394a1c02c1c1cf1031f4739893cef0fed7665e058c8f2d2a7794b218ef4b3
 DIST portage-3.0.10.tar.bz2 1048234 BLAKE2B 9011c7a3a7ea6c5c78190c5344370d26700e4bf95e56fdf7036c3c4e1ef2e8bf691f5ee21142aaa4e15d5798404e5abadfdb2b5fea288451666840f0adb0ef77 SHA512 d5823fa263876350f5128e03c92350a90f665a5539e0eeea1cfb9320a1c83cfdffe91315bfa54dbc1ba6ffb42fdcbda3b0b728f79aaf3ef254ebb7fd09563188
+DIST portage-3.0.12.tar.bz2 1049335 BLAKE2B 9f7b17ebfe068559ffbc2bc0799f72901abab8b8b5bb608c8f6afe1f8f7fdaae1026c2a04d9b2256b367711196e32b58c6927ea6fc57146148ed71b295acdcb8 SHA512 6f93f35c06ac765f926f5281e2fac99d52140e8c5d95ee4224796c1ea23ed5f45ed5382acbbfc7aebf9f68a9c585fc1b41b615ef765be2d16577909032de1350
 DIST portage-3.0.5.tar.bz2 1043083 BLAKE2B f95fea950c15a9ddc7b1e87820a6d300c54d0b027c36a6522293496cbe39b40a7e4e472faf9f65c96c4f83f34a27830c4795d433860ed9f87d042f9b18a59878 SHA512 59f06514c16f215647ab7c3f4eec40bacb8e17bba46b2d59b94be938891c2e48d157d240fb47ae736968bbd754ea56343b0138d4ccba58458913b95a798f0c66
 DIST portage-3.0.8.tar.bz2 1046968 BLAKE2B 662147c37a9e7b81030fadb4d6438b734ee57a9eb9bfcee80991d137a017aa3541565961282ebf8736db71aeb05532ffa139ff3a34a84bc9064cf74427acb666 SHA512 5f97870a11ecca30ffe8f463f87cd16a1edb52b44832c6eaba15cadcfde2b4f7edf963749e45c8043b45b38e53ee210dc913aa2d2432a2bd3928cc27c8765a85
 EBUILD portage-3.0.1.ebuild 8419 BLAKE2B 93d5389f8ffb8b673900cb6b6c1913e798d3013b9d338c0ec564eb1c60ff3ed77130f50c1a254ae2ea5ed28cde76904fa45cf20133d11f75494173d56ab6ef34 SHA512 aaf22c5f9ac45fab773d6bb5864a5e554ce43b2438f91d27e4f5229ed3e56f6b0e2dac6087136b2d08cf915dd8b031c63efa1757009c54ce929dc9e697503fd3
 EBUILD portage-3.0.10-r1.ebuild 9050 BLAKE2B c85bfdfc4e9feec2c375991b3692f1b20e6d585d3a3bf598481b20dddac2d6316ecbd212341a3710b04df43c0ce737448e81b7e100876141cd0ee54048adc6f9 SHA512 573e420036f2cf2096c2682a362290e66af5322b429d74d23d11bde4f46c58e2d28bed89952d1ecc691ced1b3289c5afa47afcbd346752704728deae1f5ce958
+EBUILD portage-3.0.12.ebuild 8809 BLAKE2B 06f3bffb7c40355bd37a6d11eed7e7a9d0b73a6cbba990c5f617b2fc632f7eccdc23019b3d9256df667922b45161b9c3c16a949dd8ea863799b32d88adb364f2 SHA512 b5e7f7a6d5206fc9b0024f51ca82591863d9c9b3709652f015762444fd94287c0715a9cf8ca2633f2ff889f5b6a174598906f679201d5edbd943d9c861e4d600
 EBUILD portage-3.0.5.ebuild 8538 BLAKE2B 3c9ac8633a12ffcd319e9cdb03461e26b152c7fb4af76c0a9027323020902cec53f9ac617a8f4a97c03ce38de8881104a87377e82c320d37e99f152d3d4dd396 SHA512 d4d59537cf3d2daae01cad629e7687da423404a32241befbbf386b5860353aa083094ef85ffd95fc36d31c2b252017ce524a8189b792d77fd7108deb735b5941
 EBUILD portage-3.0.8.ebuild 8571 BLAKE2B 122b878d60d31153b5da216ffed0b83bf7f11a13e3917b437a797d7a7f5d504b107d6326f63177a2ad6a075e1d4dfd1ff3e8437090ab4b846f189a37b1753192 SHA512 707e58660169d64091f7462416c4e8995da3b23767e3d4887d7c74a5e7e42a343cec53551214721580ba447ddbc7f56589a601faa3bcfa11a86f87bb4228dbdf
-MISC ChangeLog 525 BLAKE2B 9e2fd095dd69d98ee68f7bb1bbd9bc7439657749e075f181dda57c5e4e0ab9059bde81e40b0cd65c0cc1e2df7d6145e6b543d233bae016210b4cdf1062438d0c SHA512 d2dbb9f37f34df129b4bc6086aa897704f42b85fe492c67ba376970d77a4b04a0dfd0551eda1da89838492dea2c881511f42dc34d5e5eb39d5cb31da56858252
+MISC ChangeLog 575 BLAKE2B d1ae95b2b63a4b448c5f25defc043978e058b87e32983cd0bc2c154f7e20573f994cee3648d60d93894c64cac97ff5c95bff88659b2018defce64c80b3928823 SHA512 5a5e2de7fcd0482f8ad4d7bae7568fa53a0ec32907b80723712dd79af87397668db9200f23cf7013125d8f6d0e47338871850cea4a048230f1d04189c8eb88a0
 MISC metadata.xml 1889 BLAKE2B b55e5da54b907a21101a64059f7fac17383fca08d771d01c895051817c9eef6fc65b15f7b48ef6e5a8583e0828ec920ea88a813411b3d747dac37dc4009cb571 SHA512 0f0b37e189e3cb615429e6b34524d41a0643fd5b3332d63ca37bf914083afea0142f2a4190a068189ce62b78c22b21abef94f0bc42f872298f216585d57b17ed
